elasticsearch/elasticsearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
  namespace: observability
spec:
  type: ClusterIP
  selector:
    component: srv-elasticsearch
  ports:
  - port: 9200
    targetPort: 9200
